src/test/deca/context/invalid/operations/arithmetic/invalid_arithmetic_op_mult_string.deca
// Description:
//    test invalid operation MULT between string and int
//    Test rule 3.33
//
// [Begin Result]
//invalid_arithmetic_op_mult_string.deca:13:14: Unsupported operation '*' between types string and int. Operation '*' supported only between integer(s) and(or) float(s). (Rule 3.33)
// [End Result]
//
// Historique:
//    cree le 02/01/2025

{
    print("4" * 5);
}